# Stock_finder

./: .env.example  .gitignore  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  Makefile  README.md  SCORING.md  SECURITY.md  SOURCE_REGISTRY.md  VALIDATION.md  docker-compose.yml  ricerca_sistema_ai_rischio_drawdown.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2efc5bd8818d_initial_schema.py
backend/app/: config.py  constants.py  db.py  main.py
backend/app/adapters/: alpaca.py  base.py  brave_news.py  demo.py  discovery.py  edgar_ingest.py  gdelt_news.py  nasdaq_halts.py  news_discovery.py  news_events.py  registry.py  sec_edgar.py  sec_universe.py  stubs.py
backend/app/ai/: provider.py  schemas.py
backend/app/api/: auth.py  dashboard.py  quality.py  securities.py  serialize.py  settings_api.py  sources.py  watchlist.py
backend/app/candidates/: features.py  generator.py
backend/app/claims/: dedup.py  graph.py
backend/app/core/: audit.py  http.py  logging.py  notify.py  security.py
backend/app/jobs/: runner.py  scheduler.py
backend/app/models/: __init__.py
backend/app/scoring/: engine.py  pipeline.py
backend/config/: candidates.yaml  jobs.yaml  scoring.yaml
backend/tests/: conftest.py  test_ai_layer.py  test_auth_endpoints.py  test_automation.py  test_candidates_config.py  test_corporate_actions.py  test_dedup_claims.py  test_demo_e2e.py  test_discovery.py  test_jobs_audit.py  test_live_adapters.py  test_live_pipeline.py  test_lookahead_timestamps.py  test_news_events.py  test_scoring.py
(+33 files in other folders)
